--- a/styling/style.css
+++ b/styling/style.css
@@ -8,7 +8,7 @@
 @media screen and (min-width: 2560px) {
     #gamesBoardContainer {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         width: 100%;
     }
 
@@ -16,9 +16,17 @@
         margin-right: 50%;
     }
 
+
     #gameInfo .text {
-        padding-left: 16px;
-        padding-right: 50%;
+        width: 50%;
+    }
+    #infoSpacer {
+        width: 50%;
+        height: 16px;
+    }
+    #gameInfo
+    { 
+        flex-direction: row !important;
     }
 
     .infoContainer {
